@@ -540,10 +540,7 @@ Datum geography_area(PG_FUNCTION_ARGS)
 		s.a = s.b = s.radius;
 
 	/* Calculate the area */
-	if ( use_spheroid )
-		area = lwgeom_area_spheroid(lwgeom, &s);
-	else
-		area = lwgeom_area_sphere(lwgeom, &s);
+	area = lwgeom_area_spheroid(lwgeom, &s);
 
 	/* Clean up */
 	lwgeom_free(lwgeom);
